apps/code-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress
  namespace: code-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: code-server-uploadsize@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - code.darylm.xyz
      secretName: code-darylm-xyz-tls
  rules:
    - host: code.darylm.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 8443
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: code-server-uploadsize
  namespace: code-server
  labels:
    app: code-server
spec:
  buffering:
    maxRequestBodyBytes: 52428800
